# treddit

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
js-tree/: flare.js  index.html  rendered.html  treddit.css  treddit.js
js-tree/components/: Treddit.js  _treddit.js
lambda/: build.py  get_submissions.py  publish.py  update.py
lambda/add_submission/: add_submission.py
lambda/get_submissions/: Dockerfile  get_submissions.py
lambda/get_submissions/script/: build.sh  it.sh  run.sh
py/: create.sh  rdata.py  test_rdata.py  update.py  util.py
py/data/: api.json  listing.json  t1.json  t3.json
script/: build.sh  it.sh  run.sh
src/: lib.rs  listing.rs  main.rs  more.rs  rdata.rs  rnode.rs  t1.rs  t3.rs
tests/: common.rs  test_submission.rs  test_subreddit.rs  test_t1.rs
tests/data/: submission.json  subreddit.json
web/: package-lock.json
web-vue/: package-lock.json  package.json
web-vue/src/: App.vue
web-vue/src/components/: Submission.vue
web/src/assets/: global.css
web/src/components/: Submission.vue  Submissions.vue  Treddit.vue
