[package]
name = "treddit"
version = "0.1.0"
authors = ["chris"]
edition = "2018"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.9.1"
# log = "1.0.0"


# Idk if I need all of these. I want to parse a JSON array, so I
# copied the serde crates that reqwests was pulling in

serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
serde_derive = "1.0.89"

# conside using this instead of serde_derive
# serde = { version = "1.0", features = ["derive"] }
